<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveSelectFragment">

    <TextView
        android:id="@+id/moves_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginVertical="20dp"
        android:text="@string/welcome_to_the_movedex"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/moves_welcome_text"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/pick_your_move_" />

        <Spinner
            android:id="@+id/move_select_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/move_go_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:layout_below="@id/spinner_layout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false" />

</RelativeLayout>