<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/move_name_layout"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/move_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_name"
            android:gravity="center"
            android:layout_marginHorizontal="2dp"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/move_name_extra_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:layout_marginHorizontal="2dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/move_type_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/type_poison"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <ImageView
                android:id="@+id/move_cat_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/type_poison"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/move_atk_txt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/move_acc_txt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/ove_pp_txt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/move_effect_rate_txt"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/move_effect_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/move_extra_txt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal" />

</LinearLayout>