<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/level_move_level_txt"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:text="@string/placeholder_num"
        android:gravity="center"
        android:layout_marginHorizontal="2dp"/>

    <TextView
        android:id="@+id/level_move_name_txt"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/placeholder_name"
        android:gravity="center"
        android:layout_marginHorizontal="2dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/level_move_type_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/type_poison"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <ImageView
                android:id="@+id/level_move_cat_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/type_poison"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/level_move_atk_txt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/level_move_acc_txt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/level_move_pp_txt"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/level_move_effect_rate_txt"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_num"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="2dp"/>


        </LinearLayout>

        <TextView
            android:id="@+id/level_move_effect_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/move_extra_vert_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/move_extra_vert_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>